--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -44,6 +44,7 @@
             android:theme="@style/Theme.AppCompat" />
 
         <TextView
+            android:id="@+id/textview_body"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp"
