View 두개 겹쳐 나오는거 해결! -> fragment를 .java애서도 .xml파일에서도 두번 지정해줘서 두번나옴! -> xml파일의 <fragment>를 <ConstraintLayout>으로 변경

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,9 +10,8 @@
         android:layout_height="match_parent"
         tools:context=".MainActivity">
 
-        <fragment
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/fragment_recycler"
-            android:name="com.subing.recyclerviewexample.RecyclerFragment"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
@@ -23,9 +22,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <fragment
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/fragment_noti"
-            android:name="com.subing.recyclerviewexample.NotificationFragment"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_marginTop="8dp"
