--- a/app/src/main/res/layout/activity_detail.xml
+++ b/app/src/main/res/layout/activity_detail.xml
@@ -1,55 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
-    <LinearLayout
+<layout
+    xmlns:android="http://schemas.android.com/apk/res/android">
+    <data>
+        <variable
+            name="selected"
+            type="com.subing.recyclerviewexample.Data" />
+    </data>
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <com.subing.recyclerviewexample.SquareFrameLayout
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-            <ImageView
-                android:id="@+id/imageview_header"
-                android:src="@drawable/banana"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <com.subing.recyclerviewexample.SquareFrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:adjustViewBounds="true"
-                android:scaleType="centerCrop"/>
-        </com.subing.recyclerviewexample.SquareFrameLayout>
+                android:layout_height="wrap_content">
+                <ImageView
+                    android:id="@+id/imageview_header"
+                    android:imageResource="@{selected.photo}"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:adjustViewBounds="true"
+                    android:scaleType="centerCrop"/>
+            </com.subing.recyclerviewexample.SquareFrameLayout>
 
 
-        <TextView
-            android:id="@+id/textview_title"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/teal_200"
-            android:maxLines="2"
-            android:padding="16dp"
-            android:text="TITLE"
-            android:textAppearance="@style/TextAppearance.AppCompat.Title"
-            android:theme="@style/Theme.AppCompat" />
+            <TextView
+                android:id="@+id/textview_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/teal_200"
+                android:maxLines="2"
+                android:padding="16dp"
+                android:text="@{selected.title, default=defaults}"
+                android:textAppearance="@style/TextAppearance.AppCompat.Title"
+                android:theme="@style/Theme.AppCompat" />
 
-        <TextView
-            android:id="@+id/textview_content"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/purple_200"
-            android:maxLines="2"
-            android:padding="16dp"
-            android:text="CONTEXT"
-            android:textSize="16sp"
-            android:theme="@style/Theme.AppCompat" />
+            <TextView
+                android:id="@+id/textview_content"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:background="@color/purple_200"
+                android:maxLines="2"
+                android:padding="16dp"
+                android:text="@{selected.content, default=defaults}"
+                android:textSize="16sp"
+                android:theme="@style/Theme.AppCompat" />
 
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:padding="16dp"
-            android:text="@string/bacon_ipsum"
-            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
+            <TextView
+                android:id="@+id/textview_body"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="16dp"
+                android:text="@string/bacon_ipsum"
+                android:textAppearance="@style/TextAppearance.AppCompat.Body1" />
 
-    </LinearLayout>
+        </LinearLayout>
 
-</ScrollView>
+    </ScrollView>
+</layout>
